OSX JDK Parsing fix
Adjusted index position for JDK in process entry.
Adjusted unit tests.